--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="./img/logo.jpg" alt="#"   width="170" height="170">
         <div>
             <h2>Matheus Lombardi</h2>
-            <p style="margin-top: -10px;"> Engenharia de Software </p>
+            <p style="margin-top: -10px;">1°Sem Engenharia de Software </p>
         </div>
         <button onclick="seguirPerfil()" id="seguir">Seguir perfil</button>
     </div>
