Acrescentando o titulo Perfil

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Matheus Lombardi</h2>
             <p style="margin-top: -10px;">1° Engenharia de Software </p>
         </div>
-        <button onclick="seguirPerfil()" id="seguir">Seguir </button>
+        <button onclick="seguirPerfil()" id="seguir">Seguir Perfil</button>
     </div>
 </body>
 
