--- a/trote/index.html
+++ b/trote/index.html
@@ -14,13 +14,29 @@
         </header>
         <nav> <!-- Barra de navegação -->
             <div id="links-menu">
-                <a href="#"> Home </a>
-                <a href="#"> introdução </a>
-                <a href="#"> Objetivo </a>
+                <a href="index.html"> Home </a>
+                <a href="./introducao.html"> introdução </a>
+                <a href="objetivo.html"> Objetivo </a>
+                <a href="formato.html"> Formato </a>
+                <a href="gincana.html"> Gincana </a>
+                <a href="integracao.html"> Integração </a>
+                <a href="observacoes.html"> Observações </a>
+                <a href="calculadoras.html"> Calculadoras </a>
+                
             </div>
-            <!-- <div>
-                <img src="../img/logo.jpg" alt="logo-trote" width="70">
-            </div> -->
+            <div id="img-menu">
+                <img src="../img/logo.jpg" alt="Trote Solidário" width="90">
+            </div>
         </nav>
+        <!-- class podemos reutilizar o estilo, id não  -->
+        <!-- id não pode ser reutilizado pois só temos um elemento por id -->
+        <div class="container">
+                <h2> Trote Solidário 2025 </h2> 
+                <p>Construa vitórias fora de campo e jogue pela solidariedade</p>
+                <p>Centro Universitário Municipal de Franca</p>
+                <p>Uni-facef</p>
+                <p>Franca</p>
+            </div>
+        </div>
     </body>
 </html>
