adicionando formato.htlm

--- a/trote/introducao.html
+++ b/trote/introducao.html
@@ -34,6 +34,7 @@
     <!-- id não pode ser reutilizado pois só temos um elemento por id -->
     <div class="container">
         <h2> Trote Solidário 2025 </h2>
+        <h3>Introdução</h3>
 
         <p>
             O Centro Universitário Municipal de Franca - Uni-FACEF, criado em 1951, como
