--- a/trote/introducao.html
+++ b/trote/introducao.html
@@ -27,7 +27,7 @@
 
         </div>
         <div id="img-menu">
-            <img src="../img/logo.jpg" alt="Trote Solidário" width="90">
+            <img src="./img/logo.jpg" alt="Trote Solidário" width="90">
         </div>
     </nav>
     <!-- class podemos reutilizar o estilo, id não  -->
