--- a/trote/calculadoras.html
+++ b/trote/calculadoras.html
@@ -45,8 +45,20 @@
                         <input type="number" id="homenagem">
                     </div>
                     <div>
+                        <label for="leite">Litros de leite arrecadados </label>
+                        <input type="number" id="leite">
+                    </div>
+                    <div>
+                        <label for="kitAvulso">Kit alimentação (avulso) </label>
+                        <input type="number" id="kitAvulso">
+                    </div>
+                    <div>
+                        <label for="suplementoAvulso">Suplemento (avulso) </label>
+                        <input type="number" id="suplementoAvulso">
+                    </div>
+                    <div>
                         <button type="button" onclick="calcular()">Calcular</button>
-                        <label for=""></label>
+                        <label for="" id="soma"></label>
                     </div>
                 </form>
             </div>
