--- a/trote/calculadoras.html
+++ b/trote/calculadoras.html
@@ -36,6 +36,16 @@
                 <h2> Trote Solidário 2025 </h2> 
                 <h3>Calculadoras</h3>
                 <form>
+                    <div class="campos">
+                        <label for="">Selecione a cor da equipe: </label>
+                        <select name="" id="equipe">
+                            <option value="Laranja">Laranja</option>
+                            <option value="Preta">Preta</option>
+                            <option value="Roxa">Roxa</option>
+                            <option value="Verde">Verde</option>
+                            <option value="Vermelho">Vermelho</option>
+                        </select>
+                    </div>
                     <div>
                         <label for="mascote">Mascote do Time: </label>
                         <input type="number" id="mascote">
@@ -49,12 +59,12 @@
                         <input type="number" id="leite">
                     </div>
                     <div>
-                        <label for="kitAvulso">Kit alimentação (avulso) </label>
-                        <input type="number" id="kitAvulso">
+                        <label for="kit">Kit alimentação</label>
+                        <input type="number" id="kit">
                     </div>
                     <div>
-                        <label for="suplementoAvulso">Suplemento (avulso) </label>
-                        <input type="number" id="suplementoAvulso">
+                        <label for="suplemento">Suplemento</label>
+                        <input type="number" id="suplemento">
                     </div>
                     <div>
                         <button type="button" onclick="calcular()">Calcular</button>
