--- a/trote/calculadoras.html
+++ b/trote/calculadoras.html
@@ -66,6 +66,10 @@
                         <label for="suplemento">Suplemento</label>
                         <input type="number" id="suplemento">
                     </div>
+                    <div class="campos">
+                        <label for="sangue">Doação de Sangue</label>
+                        <input type="number" name="sangue" id="sangue">
+                    </div>
                     <div>
                         <button type="button" onclick="calcular()">Calcular</button>
                         <label for="" id="soma"></label>
