--- a/trote/calculadoras.html
+++ b/trote/calculadoras.html
@@ -10,7 +10,7 @@
 
         <title>Trote Solidário - 2025</title>
     </head>
-    <body>
+    <body id="calculadoras" class="background-laranja">
         <header> <!-- Cabeçalho do corpo da página -->
             Trote Solidário 2025
         </header>
@@ -36,7 +36,7 @@
                 <h2> Trote Solidário 2025 </h2> 
                 <h3>Calculadoras</h3>
                 <form>
-                    <div class="campos">
+                    <div id="divEquipes" class="campos">
                         <label for="">Selecione a cor da equipe: </label>
                         <select name="" id="equipe">
                             <option value="Laranja">Laranja</option>
@@ -46,7 +46,7 @@
                             <option value="Vermelho">Vermelho</option>
                         </select>
                     </div>
-                    <div>
+                    <!-- <div>
                         <label for="mascote">Mascote do Time: </label>
                         <input type="number" id="mascote">
                     </div>
@@ -73,7 +73,7 @@
                     <div>
                         <button type="button" onclick="calcular()">Calcular</button>
                         <label for="" id="soma"></label>
-                    </div>
+                    </div> -->
                 </form>
             </div>
         </div>
