--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="container"> <!-- Divisão lógica -->
         <img src="./img/logo.jpg" alt="#"   width="170" height="170">
         <div>
-            <h2>INFORMAÇÕES SOBRE O TROTE SOLIDÁRIO</h2>
-            <p style="margin-top: -10px;">-Feito por Matheus Lombardi </p>
+            <h2>MATHEUS LOMBARDI DE SOUZA</h2>
+            <p style="margin-top: -10px;"> 1°ENGENHARIA DE SOFTWARE </p>
         </div>
-        <button onclick="seguirPerfil()" id="seguir"> IR PARA INFORMAÇÕES</button>
+        <button onclick="seguirPerfil()" id="seguir"> Seguir Perfil</button>
     </div>
 </body>
 
