Atualizando a tela de Calculadora

--- a/trote/index.html
+++ b/trote/index.html
@@ -931,6 +931,11 @@
                 </li>
             </ol>
         </div>
+        <div class="paginas" id="pagina17">
+            <h2>VOCÊ CHEGOU AO FIM DO REGULAMENTO</h2>
+            <h3>DESEJA CALCULAR OS PONTOS DA SUA EQUIPE?</h3>
+            <a href="calculadoras.html"><button id="buttonPagCalculadora">IR PARA CALCULADORA DE PONTOS</button></a>
+        </div>
     </div>
     </div>
     <div class="botoes">
@@ -939,5 +944,4 @@
     </div>
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
